Fixing terrible looking buttons on Safari (Seen on Iphone SE).

--- a/Lyceum/static/styles/post.css
+++ b/Lyceum/static/styles/post.css
@@ -773,6 +773,12 @@ input:focus:-ms-input-placeholder {
         font-size: 3vh;
     }
 
+    .mobile-bottom input {
+        appearance: none;
+        -webkit-appearance: none;
+        border-radius: 0;
+    }
+
     .mobile-bottom div {
         display: flex;
         height: 7.5vh;
